fix plotly not showing error

--- a/src/component/Search.css
+++ b/src/component/Search.css
@@ -49,7 +49,16 @@ form{
   width: 20px;
 }
 
-svg{
+/* 
+이렇게 적으면 에러남.
+plotly가 svg여서 plotly에도 적용된거임
+form > svg{
+  height: 25px;;
+  width: 25px;
+  margin-right: 3px;
+} */
+
+#glass{
   height: 25px;;
   width: 25px;
   margin-right: 3px;
